fixed home page and made more readable

--- a/src/sass/_home.scss
+++ b/src/sass/_home.scss
@@ -4,18 +4,18 @@
         justify-content: space-between;
         margin: 10px 0;
         @include flex;
-
-        h1 {
-            font: {
-                family: 'Redressed', cursive;
-                size: 25px;
-            }
-            margin-left: 30px;
-            color: $color;
+    }
+    .logo {
+        font: {
+            family: 'Redressed', cursive;
+            size: 25px;
         }
+        margin-left: 30px;
+        color: $color;
+    }
 
-        nav {
-            a {
+    .nav {
+        a {
             text-decoration: none;
             color: $color;
             font: {
@@ -29,168 +29,173 @@
             &:hover {
                 color: white;
                 background-color: $color;
-                }
             }
         }
     }
 
-    .section-one {
+    .first-section {
         height: 100vh;
-        .white {
-        img.people {
-            max-width: 70%;
-            display: block;
-            margin: 80px auto 50px auto;
-        }
-        h1 {
+    }
+
+    .left-side .people {
+        max-width: 70%;
+        display: block;
+        margin: 80px auto 50px auto;
+    }
+
+    .img_intro {
+        color: $color;
+        font-size: 35px;
+        text-align: center;
+        padding: 5px 10px 15px 5px; 
+    }      
+
+    .right-side {
+        background-color: $color;
+        height: 45%;
+    } 
+
+    .right-side_intro {
+        color: white;
+        font-size: 30px;
+        text-align: center;
+        padding-top: 100px;
+    }
+
+    label {
+        margin: 15px;
+        height: 130px;
+        line-height: 130px;
+        input[type=text] {
+            width: 300px;
+            padding: 10px;
+            margin: auto;
+            font-size: 20px;
+            outline: none;
+            border: none;
+            border-radius: 5px;
             color: $color;
-            font-size: 35px;
-            text-align: center;
-            padding: 5px 10px 15px 5px;      
         }
+        input::placeholder {
+            color: rgb(177, 175, 175);
         }
-
-        .violet {
-            background-color: $color;
-            height: 45%;
-            form {
-                h1 {
-                    color: white;
-                    font-size: 30px;
-                    text-align: center;
-                    padding-top: 100px;
-                }
-                label {
-                    margin: 15px;
-                    height: 130px;
-                    line-height: 130px;
-                    input[type=text] {
-                        width: 300px;
-                        padding: 10px;
-                        margin: auto;
-                        font-size: 20px;
-                        outline: none;
-                        border: none;
-                        border-radius: 5px;
-                        color: $color;
-                    }
-                    input::placeholder {
-                        color: rgb(177, 175, 175);
-                    }
-                    input[type=submit] {
-                        padding: 10px 15px;
-                        margin-left: 5px;
-                        border-radius: 5px;
-                        outline: none;
-                        border: none;
-                        font-size: 20px; 
-                        color: $color;
-                        background-color: white;  
-                        &:hover {
-                            background-color: $color;
-                            color: white;
-                            border: 2px solid white;
-                        }
-                    }
-                }
+        input[type=submit] {
+            padding: 10px 15px;
+            margin-left: 5px;
+            border-radius: 5px;
+            outline: none;
+            border: none;
+            font-size: 20px; 
+            color: $color;
+            background-color: white;  
+            &:hover {
+                background-color: $color;
+                color: white;
+                border: 2px solid white;
             }
         }
     }
+      
+    .second-section_intro {
+        font-size: 35px;
+        text-align: center;
+        padding-top: 50px;
+    }
 
-    .section-two { 
-        h1 {
-            font-size: 35px;
-            text-align: center;
-            padding-top: 50px;
-        }
-        p {
-            font-size: 25px;
-            text-align: center;
-            margin-top: 20px;
-            margin-bottom: 20px;
-        }
-        img {
-            display: block;
-            max-width: 400px;
-            margin: 10px auto;
+    p {
+        font-size: 25px;
+        text-align: center;
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
 
+    img {
+        display: block;
+        max-width: 400px;
+        margin: 10px auto;
+    }
+ 
+    @media screen and (max-width: $tablet) {}
+    @media screen and (min-width: $deskop) {
+
+    .logo {
+        font-size: 45px;
+    }
+    .nav {
+        a {
+            font-size: 20px;
+            padding: 20px;
+            border: 3px solid $color;
         }
     }
 
-    @media screen and (max-width: 768px) {}
-    @media screen and (min-width: 1024px) {
-
-    header {
-        h1 {
-            font-size: 45px;
-        }
-        nav {
-            a {
-                font-size: 20px;
-                padding: 20px;
-                border: 3px solid $color;
-            }
-        }
-    }
-
-    .section-one {
+    .first-section {
         display: flex;
         flex-grow: 1 1;
-        .white {
-            flex-basis: 50%;
-            h1 {
-            font-size: 45px;
-            }
-        }
-        .violet {
+    }
+
+    .left-side {
+        flex-basis: 50%;
+        margin-top: 40px;
+    }
+
+    .img_intro {
+        font-size: 45px;
+    }
+
+    .right-side {
         height: 100%;
         flex-basis: 50%;
-        form {
-            margin-top: 80px;
-            h1 {
-                font-size: 45px;
-                margin-bottom: 50px;
-            }
-            label {
-                margin-left: 100px;
-                input[type=text] {
-                    width: 550px;
-                    padding: 30px;
-                    text-align: center;
-                    font-size: 30px;
-                }
-                input[type=submit] {
-                    font-size: 30px;
-                    padding: 30px;
-                    
-                    }
-                }
-            }
+    }
+
+    form {
+        margin-top: 80px;
+    }
+
+    .right-side_intro {
+        font-size: 45px;
+        margin-bottom: 50px;
+    }
+
+    label {
+        margin-left: 100px;
+        input[type=text] {
+            width: 550px;
+            padding: 30px;
+            text-align: center;
+            font-size: 30px;
+        }
+        input[type=submit] {
+            font-size: 30px;
+            padding: 30px;
         }
     }
 
-    .section-two {
+    .second-section {
         padding-top: 100px;
         height: 100vh;
         line-height: 100px;
         margin-left: 10px;
         margin-right: 10px;
-        h1 {
-            font-size: 45px;
-        }
-        p {
-            font-size: 38px;
-        }
-        .pictures {
-            display: flex;
-        div {
-            margin: auto;
-            img {
-                height: 300px;
-                }
-            } 
+    }
+
+    .second-section_intro {
+        font-size: 45px;
+    }
+
+    p {
+        font-size: 38px;
+    }
+
+    .pictures {
+        display: flex;
+    }
+
+    div {
+         margin: auto;
+        img {
+            height: 300px;
         }
     }
 }
-
 
